--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -132,6 +132,12 @@ the Health Resources and Services Administration, U.S. Department of Health and 
   jQuery("span.user_profile").tooltip({
     placement: 'bottom'
   });
+  jQuery("span.tooltip-bottom").tooltip({
+    placement: 'bottom'
+  });
+  jQuery("span.tooltip-top").tooltip({
+    placement: 'top'
+  });
 //get URL params 
 (function(){
   function getUrlVars() {
