--- a/phtc/templates/registration/login.html
+++ b/phtc/templates/registration/login.html
@@ -25,7 +25,7 @@
             <p class="errornote"><span><b>ERROR:</b> Invalid username or password.</span> Please try again. Note that both username and password are case-sensitive.</p>
             {% endif %}
 
-            <p class="smalltxt"><span class="user_profile" rel="tooltip" title="Create your own PHTC account"><a href="/registration/register/">Need a new account?</a></span> | <span class="user_profile" rel="tooltip" title="Reset your password"><a href="/registration/password/reset/">Forgot password?</a></span></p>
+            <p class="smalltxt"><span class="tooltip-bottom" rel="tooltip" title="Create your own PHTC account"><a href="/registration/register/">Need a new account?</a></span> | <span class="tooltip-bottom" rel="tooltip" title="Reset your password"><a href="/registration/password/reset/">Forgot password?</a></span></p>
             </form>
             
             <form method="get" action="{{ wind_base }}login" class="well">
