--- a/media/css/main.css
+++ b/media/css/main.css
@@ -163,6 +163,15 @@ p.smalltxt
     margin: 10px;
 }
 
+h1 {
+    font-size: 24px;
+    line-height: 36px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 20px;
+    padding-bottom: 30px;
+}
+
 h2 {
     margin-top: 0;
     margin-bottom: 0;
