body tag gets a class

--- a/phtc/templates/main/dashboard.html
+++ b/phtc/templates/main/dashboard.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load user_status %}
 
+{% block title %}My Dashboard{% endblock %}
+{% block noleftsidebar %} class="no-left-sidebar"{% endblock %}
 {% block content %}
 
 <style type="text/css">
