--- a/media/css/main.css
+++ b/media/css/main.css
@@ -117,6 +117,12 @@ body {
     margin: 0 16px 0 0;
 }
 
+.module {
+	border-bottom: 1px dotted #ccc;
+	line-height: 120%;
+	line-height: 36px;
+}
+
 #return {
     border: 1px solid #fff;
     width: 400px;
