--- a/phtc/templates/main/dashboard_panel.html
+++ b/phtc/templates/main/dashboard_panel.html
@@ -30,28 +30,28 @@
 		{% for info in dashboard_info %}
 			{% ifequal p.id info.dashboard_id %}
 				{% ifnotequal info.info "" %}
-					<div data-content="{{ info.info }}" data-original-title="Module Info" class="module-info-popover"><img src="/site_media/img/status_info.png"/><br class="clear"/></div>
+					<div data-content="{{ info.info }}" data-original-title="Module Info" class="module-info-popover"><img src="/site_media/img/status_info.png"/></div>
 				{% endifnotequal %}
 			{% endifequal %}
 		{% endfor %}
 		{% get_user_section_status request.user p as status %}
 		{% ifequal status.status "complete" %}
 			<a href="{{ p.get_absolute_url }}">{{ p.label }}</a>
-			<img src="/site_media/img/status_completed.png"/><br class="clear"/>
+			<img src="/site_media/img/status_completed.png"/>
 		{% endifequal %}
 		{% ifequal status.status "in_progress" %}
 			<a href="{{ p.get_absolute_url }}">{{ p.label }}</a>
-			<img src="/site_media/img/status_inprogress.png"/><br class="clear"/>
+			<img src="/site_media/img/status_inprogress.png"/>
 		{% endifequal %}
 		{% ifequal status.status "allowed" %}
 			<a href="{{ p.get_absolute_url }}">{{ p.label }}</a>
-			<img src="/site_media/img/status_uninitiated.png"/><br class="clear"/>
+			
 		{% endifequal %}
 		{% ifequal status.status "incomplete" %}
-			<span>{{ p.label }}</span> <img src="/site_media/img/status_uninitiated.png"/><br class="clear"/>
+			<span>{{ p.label }}</span> 
 		{% endifequal %}
 		{% if not status %}
-			<span>{{ p.label }}</span> <img src="/site_media/img/status_uninitiated.png"/><br class="clear"/>
+			<span>{{ p.label }}</span> 
 		{% endif %}
 		
 
@@ -60,24 +60,24 @@
 			{% for info in dashboard_info %}
 			{% ifequal s.id info.dashboard_id %}
 				{% ifnotequal info.info "" %}
-				<div data-content="{{ info.info }}" data-original-title="Module Info" class="module-info-popover"><img src="/site_media/img/status_info.png"/><br class="clear"/></div>
+				<div data-content="{{ info.info }}" data-original-title="Module Info" class="module-info-popover"><img src="/site_media/img/status_info.png"/></div>
 				{% endifnotequal %}
 			{% endifequal %}
 			{% endfor %}
 			{% get_user_section_status request.user s as status %}
 			{% ifequal status.status "complete" %}
 				<a href="{{ s.get_absolute_url }}">{{ s.label }}</a>
-				<img src="/site_media/img/status_completed.png"/><br class="clear"/>
+				<img src="/site_media/img/status_completed.png"/>
 			{% endifequal %}
 			{% ifequal status.status "in_progress" %}
 				<a href="{{ s.get_absolute_url }}">{{ s.label }}</a>
-				<img src="/site_media/img/status_inprogress.png"/><br class="clear"/>
+				<img src="/site_media/img/status_inprogress.png"/>
 			{% endifequal %}
 			{% ifequal status.status "incomplete" %}
-				<span>{{ s.label }}</span> <img src="/site_media/img/status_uninitiated.png"/><br class="clear"/>
+				<span>{{ s.label }}</span> 
 			{% endifequal %}
 			{% if not status %}
-				<span>{{ s.label }}</span> <img src="/site_media/img/status_uninitiated.png"/><br class="clear"/>
+				<span>{{ s.label }}</span> 
 			{% endif %}
 			</div>
 				{% for sub in s.get_children %}
@@ -85,28 +85,28 @@
 					{% for info in dashboard_info %}
 						{% ifequal sub.id info.dashboard_id %}
 							{% ifnotequal info.info "" %}
-							<div data-content="{{ info.info }}" data-original-title="Module Info" class="module-info-popover"><img src="/site_media/img/status_info.png"/><br class="clear"/></div>
+							<div data-content="{{ info.info }}" data-original-title="Module Info" class="module-info-popover"><img src="/site_media/img/status_info.png"/></div>
 							{% endifnotequal %}
 						{% endifequal %}
 					{% endfor %}
 					{% get_user_section_status request.user sub as status %}
 					{% ifequal status.status "complete" %}
 						<a href="{{ sub.get_absolute_url }}">{{ sub.label }}</a>
-						<img src="/site_media/img/status_completed.png"/><br class="clear"/>
+						<img src="/site_media/img/status_completed.png"/>
 					{% endifequal %}
 					{% ifequal status.status "in_progress" %}
 						<a href="{{ sub.get_absolute_url }}">{{ sub.label }}</a>
-						<img src="/site_media/img/status_inprogress.png"/><br class="clear"/>
+						<img src="/site_media/img/status_inprogress.png"/>
 					{% endifequal %}
 					{% ifequal status.status "allowed" %}
 						<a href="{{ sub.get_absolute_url }}">{{ sub.label }}</a>
-						<img src="/site_media/img/status_uninitiated.png"/><br class="clear"/>
+						
 					{% endifequal %}
 					{% ifequal status.status "incomplete" %}
-						<span>{{ sub.label }}</span> <img src="/site_media/img/status_uninitiated.png"/><br class="clear"/>
+						<span>{{ sub.label }}</span> 
 					{% endifequal %}
 					{% if not status %}
-						<span>{{ sub.label }}</span> <img src="/site_media/img/status_uninitiated.png"/><br class="clear"/>
+						<span>{{ sub.label }}</span> 
 					{% endif %}
 					
 					</div>
