--- a/phtc/templates/main/dashboard_panel.html
+++ b/phtc/templates/main/dashboard_panel.html
@@ -27,13 +27,13 @@
 	<div class="parts" id="part_id_{{ module.id }}">
 	{% for p in module.get_children %}
 		<div class='part'>
-		{% for info in dashboard_info %}
+		{% comment %}{% for info in dashboard_info %}
 			{% ifequal p.id info.dashboard_id %}
 				{% ifnotequal info.info "" %}
 					<div data-content="{{ info.info }}" data-original-title="Module Info" class="module-info-popover"><img src="/site_media/img/status_info.png"/></div>
 				{% endifnotequal %}
 			{% endifequal %}
-		{% endfor %}
+		{% endfor %}{% endcomment %}
 		{% get_user_section_status request.user p as status %}
 		{% ifequal status.status "complete" %}
 			<a href="{{ p.get_absolute_url }}">{{ p.label }}</a>
@@ -57,13 +57,13 @@
 
 		{% for s in p.get_children %}
 			<div class='section'>
-			{% for info in dashboard_info %}
+			{% comment %}{% for info in dashboard_info %}
 			{% ifequal s.id info.dashboard_id %}
 				{% ifnotequal info.info "" %}
 				<div data-content="{{ info.info }}" data-original-title="Module Info" class="module-info-popover"><img src="/site_media/img/status_info.png"/></div>
 				{% endifnotequal %}
 			{% endifequal %}
-			{% endfor %}
+			{% endfor %}{% endcomment %}
 			{% get_user_section_status request.user s as status %}
 			{% ifequal status.status "complete" %}
 				<a href="{{ s.get_absolute_url }}">{{ s.label }}</a>
@@ -82,13 +82,13 @@
 			</div>
 				{% for sub in s.get_children %}
 					<div class='sub'>
-					{% for info in dashboard_info %}
+					{% comment %}{% for info in dashboard_info %}
 						{% ifequal sub.id info.dashboard_id %}
 							{% ifnotequal info.info "" %}
 							<div data-content="{{ info.info }}" data-original-title="Module Info" class="module-info-popover"><img src="/site_media/img/status_info.png"/></div>
 							{% endifnotequal %}
 						{% endifequal %}
-					{% endfor %}
+					{% endfor %}{% endcomment %}
 					{% get_user_section_status request.user sub as status %}
 					{% ifequal status.status "complete" %}
 						<a href="{{ sub.get_absolute_url }}">{{ sub.label }}</a>
