adding in a non conflicted classname for certificate

--- a/phtc/templates/main/certificate.html
+++ b/phtc/templates/main/certificate.html
@@ -32,7 +32,7 @@
 	padding: 10px;
 }
 
-img.certificate{
+img.certificate-diploma{
 	background-color: #E0E0E0 ;
 	padding: 5px 5px 5px 5px ;
 }
@@ -44,7 +44,7 @@ a.print-certificate{
 </style>
 <h2>Certificate Earned</h2>
 	<div class="printable">
- 		<img class="certificate" src="/site_media/img/certificate_blank.jpg">
+ 		<img class="certificate-diploma" src="/site_media/img/certificate_blank.jpg">
  		<div id="inner-wrap">
 			<div id="user">{{ user }} has completed</div>
 			<div id="label">{{ module.label }}</div>
