--- a/phtc/templates/main/dashboard_panel.html
+++ b/phtc/templates/main/dashboard_panel.html
@@ -35,25 +35,33 @@
 			{% endifequal %}
 		{% endfor %}{% endcomment %}
 		{% get_user_section_status request.user p as status %}
-		{% ifequal status.status "complete" %}
-			<a href="{{ p.get_absolute_url }}">{{ p.label }}</a>
-			<img src="/site_media/img/status_completed.png"/>
+		<div class="parttitle">
+		{% ifequal status.status "complete" %}<!-- **** COMPLETED -->
+			<div class="completed-icon-sml"></div>
+			<a class="link-title completed" href="{{ p.get_absolute_url }}">{{ p.label }}</a>
+			<div class="divclearfix"></div>
 		{% endifequal %}
-		{% ifequal status.status "in_progress" %}
-			<a href="{{ p.get_absolute_url }}">{{ p.label }}</a>
-			<img src="/site_media/img/status_inprogress.png"/>
+		{% ifequal status.status "in_progress" %}<!-- **** IN PROGRESS -->
+			<div class="inprogress-icon-sml"></div>
+			<a class="link-title inprogress" href="{{ p.get_absolute_url }}">{{ p.label }}</a>
+			<div class="divclearfix"></div>
 		{% endifequal %}
 		{% ifequal status.status "allowed" %}
-			<a href="{{ p.get_absolute_url }}">{{ p.label }}</a>
-			
+			<div class="uninitiated-icon-sml"></div>
+			<a class="link-title" href="{{ p.get_absolute_url }}">{{ p.label }}</a>
+			<div class="divclearfix"></div>
 		{% endifequal %}
 		{% ifequal status.status "incomplete" %}
-			<span>{{ p.label }}</span> 
+			<div class="unavailable-icon-sml"></div>
+			<div class="link-title unavailable">{{ p.label }}</div> 
+			<div class="divclearfix"></div>
 		{% endifequal %}
 		{% if not status %}
-			<span>{{ p.label }}</span> 
+			<div class="unavailable-icon-sml"></div>
+			<div class="link-title unavailable">{{ p.label }}</div> 
+			<div class="divclearfix"></div>
 		{% endif %}
-		
+		</div><!-- .parttitle -->
 
 		{% for s in p.get_children %}
 			<div class='section'>
@@ -66,18 +74,24 @@
 			{% endfor %}{% endcomment %}
 			{% get_user_section_status request.user s as status %}
 			{% ifequal status.status "complete" %}
-				<a href="{{ s.get_absolute_url }}">{{ s.label }}</a>
-				<img src="/site_media/img/status_completed.png"/>
+			<div class="completed-icon-sml"></div>
+				<a class="link-title completed" href="{{ s.get_absolute_url }}">{{ s.label }}</a>
+			    <div class="divclearfix"></div>
 			{% endifequal %}
 			{% ifequal status.status "in_progress" %}
-				<a href="{{ s.get_absolute_url }}">{{ s.label }}</a>
-				<img src="/site_media/img/status_inprogress.png"/>
+			<div class="inprogress-icon-sml"></div>
+				<a class="link-title inprogress" href="{{ s.get_absolute_url }}">{{ s.label }}</a>
+			    <div class="divclearfix"></div>
 			{% endifequal %}
 			{% ifequal status.status "incomplete" %}
-				<span>{{ s.label }}</span> 
+			<div class="unavailable-icon-sml"></div>
+				<div class="link-title  unavailable">{{ s.label }}</div>
+			<div class="divclearfix"></div>
 			{% endifequal %}
 			{% if not status %}
-				<span>{{ s.label }}</span> 
+			<div class="unavailable-icon-sml"></div>
+				<div class="link-title unavailable">{{ s.label }}</div> 
+			<div class="divclearfix"></div>
 			{% endif %}
 			</div>
 				{% for sub in s.get_children %}
@@ -91,22 +105,29 @@
 					{% endfor %}{% endcomment %}
 					{% get_user_section_status request.user sub as status %}
 					{% ifequal status.status "complete" %}
-						<a href="{{ sub.get_absolute_url }}">{{ sub.label }}</a>
-						<img src="/site_media/img/status_completed.png"/>
+						<div class="completed-icon-sml"></div>
+						<a class="link-title completed" href="{{ sub.get_absolute_url }}">{{ sub.label }}</a>
+			            <div class="divclearfix"></div>
 					{% endifequal %}
 					{% ifequal status.status "in_progress" %}
-						<a href="{{ sub.get_absolute_url }}">{{ sub.label }}</a>
-						<img src="/site_media/img/status_inprogress.png"/>
+						<div class="inprogress-icon-sml"></div>
+						<a class="link-title inprogress" href="{{ sub.get_absolute_url }}">{{ sub.label }}</a>
+			            <div class="divclearfix"></div>
 					{% endifequal %}
 					{% ifequal status.status "allowed" %}
-						<a href="{{ sub.get_absolute_url }}">{{ sub.label }}</a>
-						
+						<div class="uninitiated-icon-sml"></div>
+						<a class="link-title uninitiated" href="{{ sub.get_absolute_url }}">{{ sub.label }}</a>
+				            <div class="divclearfix"></div>
 					{% endifequal %}
 					{% ifequal status.status "incomplete" %}
-						<span>{{ sub.label }}</span> 
+						<div class="unavailable-icon-sml"></div>
+						<div class="link-title unavailable">{{ sub.label }}</div> 
+			            <div class="divclearfix"></div>
 					{% endifequal %}
 					{% if not status %}
-						<span>{{ sub.label }}</span> 
+						<div class="unavailable-icon-sml"></div>
+						<div class="link-title unavailable">{{ sub.label }}</div> 
+			            <div class="divclearfix"></div>
 					{% endif %}
 					
 					</div>
