--- a/media/css/main.css
+++ b/media/css/main.css
@@ -231,16 +231,6 @@ h2 {
     text-align: right;
 }
 
-.no-left-sidebar #sidebar,
-.no-left-sidebar #sidebarleft {
-    display: none;
-}
-
-.no-left-sidebar #right-content,
-.no-left-sidebar #maincontent {
-    width: 940px;
-    }
-
 .row {
     padding-top: 20px;
     margin-left: 0;
@@ -248,6 +238,18 @@ h2 {
 
 .divclearfix {
     clear: both;
+}
+
+#maincontent {
+    width: 680px;
+    padding-right: 20px;
+}
+
+#sidebarleft {
+    width: 209px;
+    border-right: 1px dotted #ccc;
+    padding-right: 10px;
+    font-size: 12px;
 }
 
 #sidebarleft ul {
@@ -261,13 +263,24 @@ h2 {
 
 #sidebarleft li {
     color: #999;
-    padding: 2px 0;
+    padding: 8px 0 0 0;
     line-height: 130%;
 }
 
 #sidebarleft li b {
     color: #000;
 }
+
+.no-left-sidebar #sidebar,
+.no-left-sidebar #sidebarleft {
+    display: none;
+}
+
+.no-left-sidebar #right-content,
+.no-left-sidebar #maincontent {
+    width: 940px;
+    padding-right: 0;
+    }
 
 .parts {
   padding: 10px;
@@ -414,3 +427,6 @@ a.completed {
     color: #333;
 }
 
+.pager {
+    margin-top: 50px;
+}
