--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -42,14 +42,6 @@ shieldbrowser({"Chrome":13,"Firefox":6,"MSIE":9,"Safari":5});
       <div class="navbar-inner">
         <ul class="nav">
           <li><a class="brand" href="/">{% if request.user.is_anonymous %}Home{% else %}My Dashboard{% endif %}</a></li>
-          {% if request.user.is_superuser %}
-            {% ifequal section.get_absolute_url NONE  %}
-            {% else %}
-              <a class="btn" id="" href="/edit{{section.get_absolute_url}}">Edit</a>
-              <a class="btn" href="{{section.get_absolute_url}}" >view page</a>
-            {% endifequal %}
-            
-          {% endif %}
           {% block topnavbarleftitems %}{% endblock %}
         </ul>
         <div class="usernav">
@@ -107,6 +99,22 @@ shieldbrowser({"Chrome":13,"Firefox":6,"MSIE":9,"Safari":5});
                 {% block sidebar %}{% endblock %}
             </div><!-- sidebarleft -->
             <div class="span9" id="maincontent">
+
+          {% if request.user.is_superuser %}
+            {% ifequal section.get_absolute_url NONE  %}
+            {% else %}
+            <ul class="nav nav-pills">
+                <li><a style="color: #000;"><b>Page mode:</b></a></li>
+                <li{% block mode-view %} class="active"{% endblock %}> <a href="{{section.get_absolute_url}}" >View</a></li>
+                <li{% block mode-edit %}{% endblock %}><a href="/edit{{section.get_absolute_url}}">Edit</a></li>
+             </ul>
+             <hr />
+            {% endifequal %}
+            
+          {% endif %}
+
+
+
                 {% block pagetitle %}{% endblock %}
                 {% block content %}{% endblock %}
                 {% block content-nav %}{% endblock %}
