--- a/phtc/templates/main/dashboard.html
+++ b/phtc/templates/main/dashboard.html
@@ -36,23 +36,23 @@
 		{% get_user_section_status request.user module as status %}
 		{% ifequal status.status "complete" %}<!-- **** COMPLETED -->
 			<div class="completed-icon"></div>
-			<a class="show-module completed" rel="{{ module.get_absolute_url }}" href="#">{{ module.label }}</a>
+			<a class="show-module completed" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
 			<a class="certificate" href="/certificate{{ module.get_absolute_url }}"><span class="tooltip-bottom" rel="tooltip" title="Print your completion certificate"><img src="/site_media/img/shim.png" width="30" height="30" /></span></a>
 			<div class="divclearfix"></div>
 		{% endifequal %}
 		{% ifequal status.status "allowed" %}
 			<div class="uninitiated-icon"></div>
-			<a class="show-module" rel="{{ module.get_absolute_url }}" href="#">{{ module.label }}</a>
+			<a class="show-module" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
 			<div class="divclearfix"></div>
 		{% endifequal %}
 		{% ifequal status.status "in_progress" %}<!-- **** IN PROGRESS -->
 			<div class="inprogress-icon"></div>
-			<a class="show-module inprogress" rel="{{ module.get_absolute_url }}" href="#">{{ module.label }}</a>
+			<a class="show-module inprogress" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
 			<div class="divclearfix"></div>
 		{% endifequal %}
 		{% if not status %}
 			<div class="uninitiated-icon"></div>
-			<a class="show-module uninitiated" rel="{{ module.get_absolute_url }}" href="#">{{ module.label }}</a>
+			<a class="show-module uninitiated" rel="{{ module.get_absolute_url }}" href="javascript:void(0);">{{ module.label }}</a>
 			<div class="divclearfix"></div>
 		{% else %}
 		{% endif %}
