--- a/phtc/templates/quizblock/single_choice.html
+++ b/phtc/templates/quizblock/single_choice.html
@@ -1,5 +1,5 @@
 {% load markup %}
-<ol type="A">
+<ol type="A" class="answerchoices">
   {% for answer in question.answer_set.all %}
     {% if block.rhetorical %}
       <li><input name="question{{question.id}}" value="{{answer.label}}" type="radio" /> {{answer.label}}</li>
