new Contact page link

--- a/phtc/templates/base.html
+++ b/phtc/templates/base.html
@@ -137,7 +137,7 @@ shieldbrowser({"Chrome":13,"Firefox":6,"MSIE":9,"Safari":5});
 	<a href="/help/">Help</a>
 	</li>
 	<li>
-	<a href="mailto:">Contact</a>
+	<a href="/contact/">Contact</a>
 	</li>
 	</ul>
   <p>Principal support for the PHTC is provided through a grant from<br />
